lsp4spl/src/features/tests/snapshots/lsp4spl__features__tests__completion__empty.snap
---
source: lsp4spl/src/features/tests/completion.rs
expression: result
---
[
    "keyword: proc",
    "keyword: type",
    "snippet: main",
    "snippet: proc",
    "snippet: type",
]
