lsp4spl/src/features/tests/snapshots/lsp4spl__features__tests__completion__expr.snap
---
source: lsp4spl/src/features/tests/completion.rs
expression: result
---
[
    "variable: a",
    "variable: i",
    "variable: j",
    "variable: k",
]
