lsp4spl/src/features/tests/snapshots/lsp4spl__features__tests__completion__no_main.snap
---
source: lsp4spl/src/features/tests/completion.rs
expression: result
---
[
    "keyword: proc",
    "keyword: type",
    "snippet: proc",
    "snippet: type",
]
