lsp4spl/src/features/tests/snapshots/lsp4spl__features__tests__completion__valid_else.snap
---
source: lsp4spl/src/features/tests/completion.rs
expression: result
---
[
    "keyword: else",
    "keyword: if",
    "keyword: while",
    "proc: clearAll",
    "proc: drawCircle",
    "proc: drawLine",
    "proc: exit",
    "proc: main",
    "proc: printc",
    "proc: printi",
    "proc: readc",
    "proc: readi",
    "proc: setPixel",
    "proc: time",
    "snippet: else",
    "snippet: if",
    "snippet: while",
]
