lsp4spl/src/features/tests/snapshots/lsp4spl__features__tests__completion__var_and_stmt.snap
---
source: lsp4spl/src/features/tests/completion.rs
expression: result
---
[
    "keyword: if",
    "keyword: var",
    "keyword: while",
    "proc: ackermann",
    "proc: clearAll",
    "proc: drawCircle",
    "proc: drawLine",
    "proc: exit",
    "proc: main",
    "proc: printc",
    "proc: printi",
    "proc: readc",
    "proc: readi",
    "proc: setPixel",
    "proc: time",
    "snippet: if",
    "snippet: var",
    "snippet: while",
    "variable: a",
    "variable: i",
    "variable: j",
    "variable: k",
]
